; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-timer-from-check.c_timer_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-timer-from-check.c_timer_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@timer_handle = common dso_local global i32 0, align 4
@prepare_cb_called = common dso_local global i32 0, align 4
@check_cb_called = common dso_local global i32 0, align 4
@timer_cb_called = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @timer_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @timer_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i64 @uv_timer_stop(i32* @timer_handle)
  %4 = icmp eq i64 0, %3
  %5 = zext i1 %4 to i32
  %6 = call i32 @ASSERT(i32 %5)
  %7 = load i32, i32* @prepare_cb_called, align 4
  %8 = icmp eq i32 1, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load i32, i32* @check_cb_called, align 4
  %12 = icmp eq i32 1, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load i64, i64* @timer_cb_called, align 8
  %16 = icmp eq i64 0, %15
  %17 = zext i1 %16 to i32
  %18 = call i32 @ASSERT(i32 %17)
  %19 = load i64, i64* @timer_cb_called, align 8
  %20 = add nsw i64 %19, 1
  store i64 %20, i64* @timer_cb_called, align 8
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i64 @uv_timer_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
